trybuild_tests/test_compile_fail_three.stderr
error[E0308]: mismatched types
 --> trybuild_tests/test_compile_fail_three.rs:6:42
  |
6 |     let new_secret: Secret<_, U5, U67> = Secret::new(secret);
  |                     ------------------   ^^^^^^^^^^^^^^^^^^^ expected `Secret<_, UInt<..., ...>, ...>`, found `Secret<String, _>`
  |                     |
  |                     expected due to this
  |
  = note: expected struct `Secret<_, UInt<UInt<UInt<UTerm, B1>, B0>, B1>, UInt<UInt<UInt<UInt<UInt<UInt<UInt<UTerm, B1>, B0>, B0>, B0>, B0>, B1>, B1>>`
             found struct `Secret<String, _, UTerm>`
